add celery config. api call for getting results for solution create/delete async calls
